2021. 4.19. Renamed zTri3DListInsert to zTri3DListAdd. [zeo_elem_list]
2021. 4.19. Renamed zLoop3DFromArray to zLoop3DCreate. [zeo_elem_list]
2021. 4.19. Renamed zVec3DAddrListFromArray to zVec3DAddrListCreate. [zeo_vec3d_list, app]
2021. 4.19. Renamed zVec3DAddrListFromArray to zVec3DArray2AddrList and modified its specification. [zeo_vec3d_list]
2021. 4.19. Renamed zVec3DListFromArray to zVec3DArray2List and modified its specification. [zeo_vec3d_list]
2021. 4.19. Renamed zLoop3DInsert to zLoop3DAdd. [zeo_elem_list, zeo_bv_ch2]
2021. 4.19. Renamed zVec3DAddrListInsert to zVec3DAddrListAdd. [zeo_vec3d_list, zeo_elem_list, app]
2021. 4.19. Renamed zVec3DListInsert to zVec3DListAdd. [zeo_vec3d_list, zeo_vec3d_tree, zeo_pointcloud, zeo_col_gjk]
2021. 4.19. Moved zVec3DList2Tree from zeo_vec3d_list to zeo_vec3d_tree, and abolished zeo_vec3d_list_tree. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_list_tree, zeo_vec3d]
2021. 4.18. Added zVec3DTree2List and zVec3DList2Tree. [zeo_vec3d_list, zeo_vec3d_tree, zeo_vec3d_list_tree, zeo_vec3d]
2021. 4.18. Modified specification of zVec3DListNN. [zeo_vec3d_list]
2021. 4.18. Renamed zVecTree3D to zVec3DTree. [zeo_vec3d_tree]
2021. 4.17. Modified _zShape3DRotFromZTK. [zeo_shape]
2021. 4.16. Modified zPH3DFReadSTL_Bin to show the progress of reading to stderr. [zeo_ph_stl]
2021. 4.16. Modified _zSTLVertListReg to speed up find-and-insertion of a vertex. [zeo_ph_stl]
2021. 4.16. Added zMat3DIsIdent. [zeo_mat3d]
2021. 4.16. Added zFrame3DEqual and zFrame3DIsIdent. [zeo_frame]
2021. 4.16. Added zMat3DRotDRC. [zeo_mat3d]
2021. 4.10. Modified zShape3DFromZTK to accept local transformation. [zeo_shape]
2021. 4.10. Added _zShape3DPosFromZTK, _zShape3DAttFromZTK, _zShape3DRotFromZTK and _zShape3DFrameFromZTK. [zeo_shape]
2021. 4.10. Added zAAFromZTK. [zeo_mat3d]
2021. 4. 2. Modified zRGBFPrint and zHSVFPrint. [zeo_color]